# major_ml

./: .gitignore  CMakeLists.txt  README.md  mandelbrot.cpp
examples/: CMakeLists.txt
examples/algorithms/: CMakeLists.txt
examples/algorithms/kmeans/: CMakeLists.txt  kmeans.cpp
examples/algorithms/knn/: CMakeLists.txt  knn.cpp
examples/algorithms/linearreg/: CMakeLists.txt  linearreg.cpp
examples/algorithms/randomforest/: CMakeLists.txt  randomforest.cpp
examples/linear_algos(to be deleted later)/: kmean.cpp  linear_reg_gradient_descent.cpp  ml_dis_parallel.cpp
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  algo_base.cpp  algo_base.h
src/algorithms/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans.h  kmeans_client.cpp  kmeans_client.h
src/algorithms/kmeans/server/: CMakeLists.txt  kmeans_server.cpp  kmeans_server.h
src/algorithms/knn/: CMakeLists.txt  knn.cpp  knn.h
src/algorithms/linearreg/: CMakeLists.txt  linearreg.cpp  linearreg.h  linearreg_client.cpp  linearreg_client.h
src/algorithms/linearreg/server/: CMakeLists.txt  linearreg_server.cpp  linearreg_server.h
src/algorithms/randomforest/: CMakeLists.txt  core_functions.cpp  core_functions.h  data_structures.cpp  helper_functions.cpp  helper_functions.h  randomforest.cpp  randomforest.h  rf_client.cpp  rf_data_structures.cpp  rf_server.cpp  rf_server.h  rfsample.cpp  rfsample_hpx.cpp  serialise_opencv_mat.cpp  serialise_opencv_mat.h  serialise_opencv_mat.hpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
src/utils/data/: CMakeLists.txt  big_data.cpp  big_data.h  csv_reader.cpp  data_frame.cpp  data_frame.h  data_row.cpp  data_row.h
src/utils/data/server/: CMakeLists.txt  data_frame.cpp  data_frame.h  data_frame_server.cpp  data_frame_server.h
src/utils/math/: CMakeLists.txt  euclidean_distance.cpp  euclidean_distance.h
